[gd_scene load_steps=14 format=3 uid="uid://bt3cmx1rs64cl"]

[ext_resource type="Script" path="res://scenes/ui/menu_puzzle/Menu_puzzle_Ui.gd" id="1_28faj"]
[ext_resource type="Texture2D" uid="uid://onvrpn0e8anf" path="res://graphics/Backpack/Green/Categories/6 - Settings/ClipBoard/Appear/3.png" id="2_xflsv"]
[ext_resource type="Texture2D" uid="uid://b4a8cyiuovkyh" path="res://graphics/objects/menuPuzzle/elecricity_symbol.png" id="3_ex1xc"]
[ext_resource type="Texture2D" uid="uid://degsrnnx4nuig" path="res://graphics/objects/menuPuzzle/Logical_gate_for_menu(vrai).png" id="4_moqwp"]
[ext_resource type="Texture2D" uid="uid://cjbqc2e4jo4n6" path="res://graphics/objects/menuPuzzle/Reflexion_for_menu(vrai).png" id="5_y86lq"]
[ext_resource type="Texture2D" uid="uid://cxjuu5qommono" path="res://graphics/Backpack/Green/Categories/6 - Settings/Sprites/Buttons & Pointers/4.png" id="6_g5p4v"]
[ext_resource type="Texture2D" uid="uid://ce15llt83gko1" path="res://graphics/Backpack/Green/Categories/6 - Settings/Sprites/Buttons & Pointers/7.png" id="7_14b7i"]
[ext_resource type="Texture2D" uid="uid://h83vcvkf1bd3" path="res://graphics/objects/menuPuzzle/red-button.png" id="8_mwa11"]
[ext_resource type="Texture2D" uid="uid://be1bq76lfb6k0" path="res://graphics/ui/x_button.png" id="9_mlvk5"]
[ext_resource type="PackedScene" uid="uid://vnhd31bl71pg" path="res://scenes/ui/menu_puzzle/option_panel_for_menu_puzzle.tscn" id="10_hy4u5"]

[sub_resource type="LabelSettings" id="LabelSettings_d2wy4"]
font_size = 47
font_color = Color(0, 0, 0, 1)
outline_color = Color(0.964706, 0.952941, 0.972549, 1)
shadow_size = 7

[sub_resource type="CanvasTexture" id="CanvasTexture_wp8ke"]
specular_texture = ExtResource("6_g5p4v")

[sub_resource type="LabelSettings" id="LabelSettings_mtuh6"]
line_spacing = -5.0
font_size = 37
font_color = Color(0, 0, 0, 1)
outline_color = Color(0.964706, 0.952941, 0.972549, 1)
shadow_size = 7

[node name="Menu_puzzle_Ui" type="CanvasLayer"]
script = ExtResource("1_28faj")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 219.0
offset_top = -136.0
offset_right = 1381.0
offset_bottom = 940.0
scale = Vector2(1.24, 1.24)
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_xflsv")

[node name="TItle" type="MarginContainer" parent="."]
offset_left = 659.0
offset_top = 217.0
offset_right = 1332.0
offset_bottom = 307.0
scale = Vector2(0.835, 0.835)

[node name="Label" type="Label" parent="TItle"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Menu des casse-têtes"
label_settings = SubResource("LabelSettings_d2wy4")
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="Electrical_symb" type="MarginContainer" parent="."]
offset_left = 655.0
offset_top = 292.0
offset_right = 835.0
offset_bottom = 444.0
scale = Vector2(0.905, 0.905)

[node name="electrical_symbol2" type="TextureRect" parent="Electrical_symb"]
modulate = Color(0.74902, 0.74902, 0.72549, 1)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("3_ex1xc")
metadata/_edit_lock_ = true

[node name="logical_symb" type="MarginContainer" parent="."]
offset_left = 663.0
offset_top = 485.0
offset_right = 1426.0
offset_bottom = 956.0
scale = Vector2(0.215, 0.215)

[node name="logical_symbol" type="TextureRect" parent="logical_symb"]
modulate = Color(0.74902, 0.74902, 0.72549, 1)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("4_moqwp")
metadata/_edit_lock_ = true

[node name="Optical_symb" type="MarginContainer" parent="."]
offset_left = 665.0
offset_top = 628.0
offset_right = 1236.0
offset_bottom = 1214.0
scale = Vector2(0.265, 0.265)

[node name="electrical_symbol" type="TextureRect" parent="Optical_symb"]
modulate = Color(0.74902, 0.74902, 0.72549, 1)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("5_y86lq")
metadata/_edit_lock_ = true

[node name="Electrical_button" type="MarginContainer" parent="."]
offset_left = 1005.0
offset_top = 327.0
offset_right = 1021.0
offset_bottom = 346.0
scale = Vector2(4, 4)

[node name="Electrical_but" type="TextureButton" parent="Electrical_button"]
layout_mode = 2
texture_normal = ExtResource("6_g5p4v")
texture_pressed = ExtResource("7_14b7i")
texture_disabled = ExtResource("8_mwa11")
metadata/_edit_lock_ = true

[node name="Logical_button" type="MarginContainer" parent="."]
offset_left = 1009.0
offset_top = 502.0
offset_right = 1025.0
offset_bottom = 521.0
scale = Vector2(4, 4)

[node name="Logical_but" type="TextureButton" parent="Logical_button"]
layout_mode = 2
disabled = true
texture_normal = ExtResource("6_g5p4v")
texture_pressed = ExtResource("7_14b7i")
texture_disabled = ExtResource("8_mwa11")
metadata/_edit_lock_ = true

[node name="Optical_button" type="MarginContainer" parent="."]
offset_left = 1010.0
offset_top = 677.0
offset_right = 1026.0
offset_bottom = 696.0
scale = Vector2(4.015, 4.015)

[node name="Optical_but" type="TextureButton" parent="Optical_button"]
layout_mode = 2
disabled = true
texture_normal = ExtResource("6_g5p4v")
texture_pressed = ExtResource("7_14b7i")
texture_hover = SubResource("CanvasTexture_wp8ke")
texture_disabled = ExtResource("8_mwa11")
metadata/_edit_lock_ = true

[node name="Options_but" type="TextureButton" parent="."]
offset_left = 1149.0
offset_top = 802.0
offset_right = 1254.0
offset_bottom = 929.0

[node name="Text" type="MarginContainer" parent="."]
offset_left = 662.0
offset_top = 807.0
offset_right = 1204.0
offset_bottom = 950.0
scale = Vector2(0.835, 0.835)

[node name="Label" type="Label" parent="Text"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "En appuyant sur l'engrenage
vous accéderez à la réparation 
de l'avion."
label_settings = SubResource("LabelSettings_mtuh6")
metadata/_edit_lock_ = true

[node name="XButton" type="TextureButton" parent="."]
offset_left = 1214.0
offset_top = 142.0
offset_right = 1278.0
offset_bottom = 206.0
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("9_mlvk5")

[node name="Option_panel_for_menu_puzzle" parent="." instance=ExtResource("10_hy4u5")]
visible = false

[connection signal="all_puzzle_win" from="." to="Option_panel_for_menu_puzzle" method="_on_menu_puzzle_ui_all_puzzle_win"]
[connection signal="pressed" from="Electrical_button/Electrical_but" to="." method="_on_electrical_but_pressed"]
[connection signal="pressed" from="Logical_button/Logical_but" to="." method="_on_logical_but_pressed"]
[connection signal="pressed" from="Optical_button/Optical_but" to="." method="_on_optical_but_pressed"]
[connection signal="pressed" from="Options_but" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="XButton" to="." method="_on_x_button_pressed"]
[connection signal="end_game" from="Option_panel_for_menu_puzzle" to="." method="_on_option_panel_for_menu_puzzle_end_game"]
